creando las clases RespuestaMultipleChoiceComun y RespuestaMultipleChoiceEspecial para los Multiple Choice Clasico, Penalidad y Parcial